--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=DEBUG, Console
+log4j.rootLogger=INFO, Console
 
 # Console is set to be a ConsoleAppender.
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
